Improved overall responsiveness and spacing for app page, updated slider with correct content/images

--- a/components/App/Features/features.module.scss
+++ b/components/App/Features/features.module.scss
@@ -13,7 +13,7 @@
   }
 
   .key-features {
-    padding: 1.5rem 0 0.5rem;
+    padding: 4rem 0 0.5rem;
   }
 
   .ai-features {
