--- a/components/App/Questions/questions.module.scss
+++ b/components/App/Questions/questions.module.scss
@@ -80,3 +80,7 @@
     color: $gray-dark;
   }
 }
+
+.spacing-y {
+  padding-bottom: 3rem;
+}
