--- a/components/Home/App/app.module.scss
+++ b/components/Home/App/app.module.scss
@@ -1,16 +1,24 @@
-@import '../../../styles/variables'; 
+@use '../../../styles/breakpoints' as *;
+@import '../../../styles/variables';
 
 .app-wrapper {
   position: relative;
   padding-top: 8rem;
   padding-bottom: 16rem;
   gap: 2rem !important;
-  // background-image: linear-gradient(rgba($color: $ln-blue, $alpha: 0.2), transparent 30%);
-  // padding-top: 12rem;
-  // padding-bottom: 8vw;
-  // background-image:
-  // radial-gradient(circle farthest-side at 50% 100%, rgba(17, 43, 102, 0.5), transparent 75%);
 }
+
+.image {
+  padding: 5rem 0 0;
+}
+
+// .app-header {
+//   padding: 2rem 0 0;
+
+//   @include lg {
+//     padding: 3rem 0 0;
+//   }
+// }
 
 .app-wrapper > h4 {
   max-width: 60ch;
@@ -48,34 +56,25 @@
   margin-bottom: 2rem;
 }
 
-.app-wrapper .grid:nth-of-type(2n)
-{
+.app-wrapper .grid:nth-of-type(2n) {
   grid-template-columns: 4fr 1fr;
 }
 
-.app-wrapper .grid:nth-of-type(2n)
-.clear-container{
+.app-wrapper .grid:nth-of-type(2n) .clear-container {
   order: -1;
 }
 
-.app-wrapper .grid
-.clear-container{
+.app-wrapper .grid .clear-container {
   max-width: none;
   gap: 1rem;
 }
 
-.app-wrapper .grid
-.clear-container h4{
-  // width: 100%;
-}
-
-.mockup-wrapper img{
+.mockup-wrapper img {
   scale: 0.8;
   transform: translateY(5%) !important;
 }
 
-.alternating-rows:nth-of-type(2)
-img{
+.alternating-rows:nth-of-type(2) img {
   // font-size: 1.5rem;
   transform: translateX(8%) !important;
 }
@@ -95,28 +94,24 @@ img{
     width: 100%;
   }
 
-  .app-wrapper .grid
-  .clear-container{
+  .app-wrapper .grid .clear-container {
     max-width: none;
     // max-height: 21rem;
     gap: 1rem;
   }
 
-  .app-wrapper .grid
-  .clear-container h4{
+  .app-wrapper .grid .clear-container h4 {
     font-size: 1.5rem;
     // width: 100%;
   }
 
-  .app-wrapper .grid
-  img{
+  .app-wrapper .grid img {
     // font-size: 1.5rem;
     transform: translateX(-10%) scale(2);
     // width: 200%;
   }
 
-  .app-wrapper .grid:nth-of-type(2)
-  img{
+  .app-wrapper .grid:nth-of-type(2) img {
     // font-size: 1.5rem;
     transform: translateX(-20%);
   }
