--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -42,7 +42,7 @@
 }
 
 .list-wrapper span::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 50%;
   left: -1rem;
